# Fejnando

./: .gitignore  CMakeLists.txt  configure_and_build.sh  fejnando.sublime-project
resources/: sprite_sheet.shader.frag  sprite_sheet.shader.vert
src/: allocator.c  allocator.h  common.h  main.c  main_glfw.c  opengl_extensions.c  opengl_extensions.h  shaders.c  shaders.h
src/game/: sprites.h
src/glad/: gl.h  gl_3_3.h
